update remove notes and categories services and fix uploading notes and categries
