# src/swagger/api/models/NotificationModel.ts
@@ -6,9 +6,14 @@ export type NotificationModel = {
     name: string;
     expression: string;
     type: NotificationModel.type;
+    triggerTime?: string;
     userId: string;
     noteId: string;
     id: string;
+    dayOfWeek?: NotificationModel.dayOfWeek;
+    hours?: number;
+    minutes?: number;
+    timezoneOffset?: number;
 };
 
 export namespace NotificationModel {
@@ -16,6 +21,16 @@ export namespace NotificationModel {
     export enum type {
         REOCCURRING = 'reoccurring',
         ONE_TIME = 'oneTime',
+    }
+
+    export enum dayOfWeek {
+        SUN = 'SUN',
+        MON = 'MON',
+        TUE = 'TUE',
+        WED = 'WED',
+        THU = 'THU',
+        FRI = 'FRI',
+        SAT = 'SAT',
     }
 
 
